--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,23 @@
+appnope==0.1.0
+BeautifulSoup==3.2.1
+beautifulsoup4==4.4.0
+decorator==4.0.2
 dj-database-url==0.3.0
 Django==1.8.1
 django-postgrespool==0.3.0
+gnureadline==6.3.3
 gunicorn==19.3.0
+ipdb==0.8.1
+ipython==4.0.0
+ipython-genutils==0.1.0
+lxml==3.4.4
+path.py==8.1.1
+pexpect==3.3
+pickleshare==0.5
 psycopg2==2.6
+requests==2.7.0
+simplegeneric==0.8.1
 SQLAlchemy==1.0.4
+traitlets==4.0.0
+wheel==0.24.0
 whitenoise==1.0.6
